chore: use simpler alias